# Users/src/main/resources/openapi/users.yml
@@ -3,6 +3,32 @@ info:
   version: 1.0.0
   title: cinema-users
 paths:
+  /user:
+    patch:
+      operationId: selfResetPassword
+      description: resets password
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+    put:
+      operationId: selfUpdateUser
+      description: upadtes user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequest'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerResponse'
   /user/{id}:
     parameters:
       - name: id
@@ -34,6 +60,29 @@ paths:
 
   /admin:
     get:
+      summary: Get admins by parameters
+      operationId: getAdmins
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            format: int64
+            default: 50
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 0
+      responses:
+        '200':
+          description: 'result of search process'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AdminFindResult'
+    post:
       operationId: createAdmin
       description: Create user Admin
       requestBody:
@@ -48,6 +97,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AdminResponse'
+  /admin/user/update/{id}:
+    parameters:
+      - name: id
+        in: path
+        schema:
+          type: integer
+          format: int64
+        required: true
+    put:
+      operationId: updateUser
+      description: upadtes user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequest'
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerResponse'
   /admin/{id}:
     parameters:
       - name: id
@@ -67,6 +139,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/AdminResponse'
   /manager:
+    get:
+      summary: Get managers by parameters
+      operationId: getManagers
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            format: int64
+            default: 50
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 0
+      responses:
+        '200':
+          description: 'result of search process'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerFindResult'
     post:
       operationId: createManager
       description: Create user Manager
@@ -101,6 +196,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/WorkerResponse'
   /worker:
+    get:
+      summary: Get workers by parameters
+      operationId: getWorkers
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            format: int64
+            default: 50
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 0
+      responses:
+        '200':
+          description: 'result of search process'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerFindResult'
     post:
       operationId: createWorker
       description: Create user Worker
@@ -135,6 +253,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/WorkerResponse'
   /customer:
+    get:
+      summary: Get customers by parameters
+      operationId: getCustomers
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            format: int64
+            default: 50
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 0
+      responses:
+        '200':
+          description: 'result of search process'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkerFindResult'
     post:
       operationId: createCustomer
       description: Create user Customer
@@ -222,3 +363,51 @@ components:
           type: string
         zipCode:
           type: string
+    AdminFindResult:
+      type: object
+      properties:
+        startElement:
+          type: integer
+          format: int64
+        totalCount:
+          type: integer
+          format: int64
+        count:
+          type: integer
+          format: int64
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/AdminResponse'
+    WorkerFindResult:
+      type: object
+      properties:
+        startElement:
+          type: integer
+          format: int64
+        totalCount:
+          type: integer
+          format: int64
+        count:
+          type: integer
+          format: int64
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/WorkerResponse'
+    CustomerFindResult:
+      type: object
+      properties:
+        startElement:
+          type: integer
+          format: int64
+        totalCount:
+          type: integer
+          format: int64
+        count:
+          type: integer
+          format: int64
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/WorkerResponse'
